// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/news/search returns 400 for invalid time range 1`] = `
{
  "error": "开始时间格式无效",
  "success": false,
  "timestamp": "2024-01-01 08:00:00",
  "timezone": "Asia/Shanghai",
}
`;

exports[`api/news/search returns error when q is missing 1`] = `
{
  "error": "[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "null",
    "path": [
      "q"
    ],
    "message": "Expected string, received null"
  }
]",
  "success": false,
  "timestamp": "2024-01-01 08:00:00",
  "timezone": "Asia/Shanghai",
}
`;

exports[`api/news/search returns search results 1`] = `
{
  "data": {
    "filters": {},
    "news": [
      {
        "id": "news_1",
        "timestamp": "2024-01-01 08:00:00",
        "timestamp_display": "2024-01-01 08:00:00",
        "title": "Title",
      },
    ],
    "pagination": {
      "hasNext": false,
      "hasPrev": false,
      "limit": 10,
      "page": 1,
      "total": 1,
      "totalPages": 1,
    },
    "searchInfo": {
      "found": 1,
      "keyword": "test",
      "searchFields": "both",
      "sortBy": "relevance",
    },
  },
  "message": "找到1条相关新闻",
  "success": true,
  "timestamp": "2024-01-01 08:00:00",
  "timezone": "Asia/Shanghai",
}
`;
